# pixcat

./: .gitignore  README.md  default.nix  pyproject.toml  setup.cfg
pixcat/: __init__.py  display.py  plot_fig.py
