[metadata]
name = pixcat
author = Gaetan Lepage
author_email = gaetan.lepage@inria.fr
version = 0.2
description = A python module to display an image in the kitty terminal
long_description = file: README.md
keywords = kitty
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering
license = GPLv3
license_files =
    LICENSE

[options]
zip_safe = False
# include_package_data = True
packages = find:
# scripts =
install_requires =
    numpy
    opencv-python
include_package_data = True

[options.package_data]
* = py.typed
